package com.enhui.design.bridge;

/**
 * 实现化角色-年级
 *
 * @Author 胡恩会
 * @Date 2020/6/26 16:40
 **/
public interface Grade {

    String getGradeName();
}
