package com.enhui.design.bridge;

/**
 * 具体实现化角色-二年级
 *
 * @Author 胡恩会
 * @Date 2020/6/26 16:44
 **/
public class TwoGrade implements Grade {
    @Override
    public String getGradeName() {
        return "二年级";
    }
}
