package com.enhui.design.bridge;

/**
 * 具体实现化角色-一年级
 *
 * @Author 胡恩会
 * @Date 2020/6/26 16:44
 **/
public class OneGrade implements Grade{
    @Override
    public String getGradeName() {
        return "一年级";
    }
}
